--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.7.5", features = ["ws", "macros"] }
-axum-extra = { version = "0.9.3", features = ["typed-header"] }
-chrono = "0.4.38"
-dotenv-linter = "3.3.0"
-dotenvy_macro = "0.15.7"
+axum = { version = "0.7", features = ["ws", "macros"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
+chrono = "0.4"
+dotenv-linter = "3.3"
+dotenvy_macro = "0.15"
 rust-ocpp = { version = "1.0.0", default-features = false, features = ["v1_6"] }
-serde = "1.0.203"
-serde_json = "1.0.117"
-tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
-futures = "0.3.30"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-headers = "0.4.0"
-strum_macros = "0.26.4"
-owo-colors = { version = "4.0.0", features = ["supports-color", "supports-colors"] }
+serde = "1"
+serde_json = "1"
+tokio = { version = "1", features = ["rt-multi-thread"] }
+futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+headers = "0.4"
+strum_macros = "0.26"
+owo-colors = { version = "4", features = ["supports-color", "supports-colors"] }
+tracing-appender = "0.2"
